# auto-major-adv-ml-series

./: .gitignore  README.md  pyproject.toml
predictive_maintenance/notebooks/: mlops_complete_workshop.ipynb
warranty_cost_repair_prediction/data/: auto_major_india_complete_metadata.csv  auto_major_india_failure_analysis.csv  vw_india_complete_metadata.csv
warranty_cost_repair_prediction/data/clustering_and_anomaly_data/: abc_warranty_anomaly_data.csv  abc_warranty_clustering_data.csv
warranty_cost_repair_prediction/data/sup_lr_data/: vw_india_regional_breakdown.csv  vw_india_statistics.csv
warranty_cost_repair_prediction/notebooks/: abc_anomaly_detection_notebook.ipynb  clustering_analysis_enhanced.ipynb  eda_and_data_preprocessing_notebook.ipynb  xgb_sup_lr_warr_cost_pred.ipynb
