[project]
name = "auto-major-series-satya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pip>=25.2",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.1",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "xgboost>=3.0.5",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipython>=9.5.0",
    "jupyter>=1.1.1",
    "notebook>=7.4.5",
]
